
BUG FIXES:
+Handle error in style manager when default font face name is unknown.
+Fix unwanted/invalid completion issue in HTML autocompletion for open brackets
on lines with tabs in them.
+Fix PyDeadObject that could occur during reload file request.
+Fix crash that could occur during formatting of log messages.
+Handle PyDeadObject error that could occur when changing tab icons

#-----------------------------------------------------------------------------#

VERSION 0.7.12
DATE 08/12/2012
52nd Alpha Release

NEW: [features/enhancements]

BUG FIXES:
+Fix unable to edit file extension associations on Linux systems (issue 745).
+Fix issue with duplicated @ symbols inserted by generic completer (issue 743).
+Fix some Unicode handling issues in log handler.
+Fix bug in Tango art provider fallback code which could end up looking in
Default theme instead of Tango theme directory for mime icons.
+Fix PyDeadObject errors related to failed destruction calls by AuiManger.

#-----------------------------------------------------------------------------#

VERSION 0.7.08
DATE 07/15/2012
51st Alpha Release

NEW: [features/enhancements]
+New version of FileBrowser Plugin version 2.0. Nearly a complete re-write of
the main part of the plugin to use a new file view. Adds ability to turn editor
tab synchronization on and off. Adds configuration for filtering files out of the
view and new configuration for showing hidden files.
+Choose directory dialog from Find Dialog will now automatically expand to the directory of the
current file.
+Update embedded aui

BUG FIXES:
+Fix major and apparently very long standing issue on Windows systems where
application profiles were not getting updated correctly and settings would get
lost between updates.
+Fix issues with sessions not getting updated properly under some use cases.
+Fix crash condition that could occur when reload of file fails.
+Fix file encoding detection issue that some systems experienced.