@@ -24,6 +24,7 @@ on lines with tabs in them.
 +Fix PyDeadObject that could occur during reload file request.
 +Fix crash that could occur during formatting of log messages.
 +Handle PyDeadObject error that could occur when changing tab icons
++Don't handle Shift+Delete as forward delete on OSX (issue 721)
 
 #-----------------------------------------------------------------------------#
 
